--- a/src/Blanquita.Web/Components/Pages/Reportes/Reimpresiones.razor
+++ b/src/Blanquita.Web/Components/Pages/Reportes/Reimpresiones.razor
@@ -49,6 +49,7 @@
         <MudCard Elevation="4" Class="rounded-lg animate-slide-up">
             <MudTable ServerData="ServerReload" 
                       Hover="true" 
+                      Dense="true"
                       @ref="recosTable"
                       Elevation="0"
                       Striped="true">
@@ -136,6 +137,7 @@
         <MudCard Elevation="4" Class="rounded-lg animate-slide-up">
             <MudTable ServerData="CargarDatosCortes" 
                       Hover="true" 
+                      Dense="true"
                       @ref="cortesTable"
                       Elevation="0"
                       Striped="true">
